# cmp_int

./: .CMakeLists.txt.swp  CHANGES  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  LICENSE  Makefile  README.md  cmake_install.cmake  cmp_int.h  test.c  utility.h
.github/workflows/: cmake.yml
Testing/Temporary/: CTestCostData.txt  LastTest.log.tmp
docs/: b_post.adoc  bpost.tex
include/: .cmp_int.h.swp  .unit_test_header.h.swp  cmp_int.h  unit_test_header.h
test/: .CMakeLists.txt.swp  .TestCmpInt.c.swp  .TestStdLib.c.swp  .signed_cmp_equal.c.swp  .unsigned_cmp_equal.c.swp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  TestCmpInt  TestCmpInt.c  TestSignedEqual  TestStdLib  TestStdLib.c  TestUnsignedEqual  cmake_install.cmake  signed_cmp_equal.c  unsigned_cmp_equal.c
test/Testing/Temporary/: LastTest.log.tmp
